tests/ui/ink/mock/fail_without_trait.rs
#[obce::mock]
impl () {
    fn method(&self) {}
}

fn main() {}
